maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:8: error: not found: value random2
			direction=random2()
                                  ^