maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	var direction = 1
	while (!estSurBiscuit) {
		if (!estFaceMur) {
			avance()
		} else {
			direction=random2()
			if (direction==0) {
				gauche()
			} else {
				droite()
			}
		}
		
	}
}
